<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/bg3"
    tools:context=".GoodGame" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:text="@string/you_won"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/time_completed"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:text="@string/time_completed"
		android:textAppearance="?android:attr/textAppearanceMedium" />
    
       <Button
          android:id="@+id/button3"
          android:layout_width="fill_parent"
          android:layout_height="0dp"
          android:layout_weight="1"
          android:drawableLeft="@drawable/scores_light"
          android:drawableRight="@drawable/scores_light"
          android:gravity="center"
          android:onClick="SaveScoreButtonPressed"
          android:text="@string/save_score_button" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:text="@string/play_again"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    
    <Button
          android:id="@+id/button1"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:onClick="PlayAgainButtonPressed"
          android:text="@string/Yes_Button" />
      <Button
          android:id="@+id/button2"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:onClick="QuitButtonPressed"
          android:text="@string/No_Button" />
      </LinearLayout>

  
      
     

</LinearLayout>
