<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/bg2"
    tools:context=".TimeTrial" >

    

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:text="@string/Is_the_secret_number_here" 
        android:textAppearance="?android:attr/textAppearanceLarge"/>
    
     <TextView
        android:id="@+id/TimeLabel"
        android:layout_width="fill_parent"
        android:gravity="center_horizontal"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/Time_Label"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
     <ViewFlipper
        android:id="@+id/viewFlipper1"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:layout_gravity="center_horizontal" >
    </ViewFlipper>

   

     <Button
        android:id="@+id/guess_button"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:drawableLeft="@drawable/swipe_right_small"
        android:drawableRight="@drawable/swipe_right_small"
        android:gravity="center_horizontal"
        android:text="Swipe"
        android:textSize="18dp"
        />

    <Button
        android:id="@+id/yes_button"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:onClick="IfYesButtonPressed"
        android:text="@string/Yes_Button"
        android:textSize="18dp"
        
       />

    <Button
        android:id="@+id/no_button"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:onClick="IfNoButtonPressed"
        android:text="@string/No_Button"
        android:textSize="18dp" 
      />

  
        
        

</LinearLayout>